// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SessionBrowser component > enters search mode, filters sessions, and renders match snippets 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Chat Sessions  (1 total, filtered)                                                               │
│                                                                                                  │
│ Search: query (Esc to cancel)                                                                    │
│                                                                                                  │
│   Age ▽ │ Msgs   │ Match                                                                         │
│ ❯ 10mo  │ 1      │ You:    Query is here a… (+1 more)                                            │
│ ▼                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SessionBrowser component > renders a list of sessions and marks current session as disabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Chat Sessions  (2 total)                                                                         │
│ Navigate: ↑/↓   Resume: Enter   Search: /   Delete: d   Quit: q                                  │
│ Sort: s         Reverse: r      First/Last: g/G                                                  │
│                                                                                                  │
│   Age ▽ │ Msgs   │ Name                                                                          │
│ ❯ 10mo  │ 5      │ Second conversation about dogs (current)                                      │
│   10mo  │ 2      │ First conversation about cats                                                 │
│ ▼                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SessionBrowser component > renders rows with dim msgs column and bright age/name columns 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Chat Sessions  (2 total)                                                                         │
│ Navigate: ↑/↓   Resume: Enter   Search: /   Delete: d   Quit: q                                  │
│ Sort: s         Reverse: r      First/Last: g/G                                                  │
│                                                                                                  │
│   Age ▽ │ Msgs   │ Name                                                                          │
│ ❯ 10mo  │ 3      │ First session                                                                 │
│   10mo  │ 7      │ Second session                                                                │
│ ▼                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SessionBrowser component > renders the pending delete row with red background and light text 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Chat Sessions  (2 total)                                                                         │
│ Delete: d again to confirm   Cancel: Esc                                                         │
│ Any other key cancels                                                                            │
│                                                                                                  │
│   Age ▽ │ Msgs   │ Name                                                                          │
│ ❯ 10mo  │ 1      │ First session                                                                 │
│   10mo  │ 1      │ Second session                                                                │
│ ▼                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SessionBrowser component > shows an error state when loading sessions fails 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Error: storage failure                                                                           │
│ Press q to exit                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SessionBrowser component > shows empty state when no sessions exist 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ No auto-saved conversations found.                                                               │
│ Press q to exit                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
